fix: adjust users table, route, and documentation
